--- a/HTML/23.Table/Precties.html
+++ b/HTML/23.Table/Precties.html
@@ -1,40 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    
-    <table border="1" >
-        <tr>
-          <th>Name</th>
-          <th>Subject</th>
-          <th>Marks</th>
-        </tr>
-        <tr>
-          <td rowspan = "2">Hillary</td>
-          <td>Advanced Web</td>
-          <td>75</td>
-        </tr>
-        <tr>
-          <td>Operating Syatem</td>
-          <td>60</td>
-        </tr>
-            <tr>
-          <td rowspan = "2">Lary</td>
-          <td>Advanced Web</td>
-          <td>80</td>
-        </tr>
-        <tr>
-          <td>Operating Syatem</td>
-          <td>75</td>
-        </tr>
-        <tr>
-          <td colspan="3">Total Average: 72.5</td>
-        </tr>
-      </table>
-       
+
+  <table border="1" cellpadding="2px">
+    <colgroup>
+      <col style="background-color: green" width="30">
+      <col style="background-color:   #ff7256" width="30">
+      <col style="background-color:   #ff56bb" width="30">
+    </colgroup>
+    <tbody>
+      <tr style="background-color: yellow;">
+        <th>Name</th>
+        <th>Subject</th>
+        <th>Marks</th>
+      </tr>
+      <tr>
+        <td rowspan="2"></a>Hillary</td>
+        <td>Advanced Web</td>
+        <td>75</td>
+      </tr>
+      <tr>
+        <td>Operating Syatem</td>
+        <td>60</td>
+      </tr>
+      <tr>
+        <td rowspan="2">Lary</td>
+        <td>Advanced Web</td>
+        <td>80</td>
+      </tr>
+      <tr style="background-color: ;">
+        <td>Operating Syatem</td>
+        <td>75</td>
+      </tr>
+      <tr align="center" style="background-color:aqua">
+        <td colspan="3">Total Average: 72.5</td>
+      </tr>
+    </tbody>
+  </table>
+
 </body>
+
+</html>
+
+<hr>
+<hr>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
+
+  <table border="1">
+    <tbody>
+      <tr>
+        <td colspan="4" align="centre">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New
+          Employees Record</td>
+      </tr>
+      <tr>
+        <th align="centre"><b>&nbsp;&nbsp; Name &nbsp;&nbsp;</b></th>
+        <th align="centre" colspan="2"><b>Jobs</b></th>
+        <th align="centre"><b>&nbsp;&nbsp; Working Experience &nbsp;&nbsp;</b></th>
+      </tr>
+      <tr>
+        <td>John</td>
+        <td>Software Engineer</td>
+        <td>Data Analyst</td>
+        <td rowspan="2">5 Years</td>
+      </tr>
+      <tr>
+        <td>Ale</td>
+        <td colspan="2">Senior Web Developer</td>
+      </tr>
+      <tr>
+        <td>Jack</td>
+        <td>Junior Web Writter</td>
+        <td>Blogger</td>
+        <td>6 Months</td>
+      </tr>
+    </tbody>
+  </table>
+</body>
+
 </html>
