--- a/CSS/13.MarginPadding/01.Intro.html
+++ b/CSS/13.MarginPadding/01.Intro.html
@@ -20,26 +20,26 @@
             margin: 50px;
         }
 
-        /* .margin-top { */
-            /* margin-top: 50px; */
+        .margin-top {
+            margin-top: 50px;
         }
 
-        /* .margin-bottom { */
-            /* margin-bottom: 50px; */
+        .margin-bottom {
+            margin-bottom: 50px;
         }
 
-        /* .margin-left { */
-            /* margin-left: 50px; */
+        .margin-left {
+            margin-left: 50px;
         }
 
-        /* .margin-right { */
-            /* margin-right: 50px; */
+        .margin-right {
+            margin-right: 50px;
         }
-        /* .margin-short{ */
-            /* margin: 5px 50px 20px 60px; */
+        .margin-short{
+            margin: 5px 50px 20px 60px;
         }
-        /* .margin-short-xy{ */
-            /* margin: 50px 20px ; */
+        .margin-short-xy{
+            margin: 50px 20px ;
         }
     </style>
 </head>
