--- a/CSS/26.Display.html/Task/02.Task.html
+++ b/CSS/26.Display.html/Task/02.Task.html
@@ -39,6 +39,22 @@
             border: 0px solid;
             background-color:blueviolet;
         }
+        .box4 {
+            height: 50px;
+            width: 200px;
+            border: 0px solid;
+            background-color: blue;
+        }
+        .row1 {
+            flex-direction: column;
+        }
+        .box5 {
+            height: 50px;
+            width: 200px;
+            border: 0px solid;
+            background-color: blue;
+            
+        }
         </style>
 </head>
 <body>
@@ -49,9 +65,11 @@
         </div>
         <div class="row">
         <div class="box box3">Menu3</div>
-        <div aria-colspan="2">Menu4</div>
-        <div 
-        </div>
+        <div class="box box4">Menu4</div>
     </div>
+    <div class="row1">
+    <div class="box box5">Menu5</div>
+    </div>
+</div>
 </body>
 </html>
