--- a/CSS/26.Display.html/Task/01.Task.html
+++ b/CSS/26.Display.html/Task/01.Task.html
@@ -32,18 +32,21 @@
             width: 150px;
         }
         .box3 {
+            flex-grow: 1;
             height: 300px;
-            width: 1000px;
+            /* width: 1000px; */
         }
         .box4 {
+            flex-grow: 1;
             height: 50px;
-            width: 800px;
+            /* width: 800px; */
             border: 5px solid;
             margin-top: 3px;
             text-align: center;
             background-color:aqua;            
         }
         .box5 {
+            
             height: 50px;
             width: 500px;
             border: 5px solid;
