--- a/Assginment/Assginment CSS/CSSAssginment.html
+++ b/Assginment/Assginment CSS/CSSAssginment.html
@@ -71,5 +71,17 @@
     <p>The background-color property sets the background color of an element.</p>
     <p>The background of an element is the total size of the element, including padding and border (but not the margin).</p>
     </div>
+    <h3>07.How can image repetition of the backup be controlled?</h3>
+    <p>In this article, we will see how an image repetition of the backup is controlled in CSS. This task can be achieved by using the background-repeat property that will help us to control the repetition of the image.</p>
+    <p>The background-repeat property in CSS is used to repeat the background image both horizontally and vertically. It also decides whether the background image will be repeated or not.</p>
+    <p>Syntax: background-repeat: repeat|repeat-x|repeat-y|no-repeat|initial|inherit;</p>
+    <h3>08.What is the use of the background-position property?</h3>
+    <p>The background-position property sets the starting position of a background image.</p>
+    <h3>09.Which property controls the image scroll in the background?</h3>
+    <p>The background-attachment property sets whether a background image scrolls with the rest of the page, or is fixed.</p>
+    <h3>10.Why should background and color be used as separate properties?</h3>
+    <h3>11.How to center block elements using CSS1?</h3>
+    <p>The “blocks” are known for taking full line space, forcing other elements to start on a new line. In other words, they have a width of 100% of the webpage or container holding the block.  In this article, we are going to see how to block elements that usually behave and how to center them using CSS.</p>
+    <h3></h3>
 </body>
 </html>
