--- a/CSS/26.Display/Grid/Properties.html
+++ b/CSS/26.Display/Grid/Properties.html
@@ -33,12 +33,12 @@
         }
     </style>
     <main class="grid">
-        <img src="images/23m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/22l.jpg" alt="Sample photo">
-        <img src="images/15l.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
-        <img src="images/16l.jpg" alt="Sample photo">
+        <img src="Image/img14.jpeg" alt="Sample photo">
+        <img src="Image/img10.jpeg" alt="Sample photo">
+        <img src="Image/img17.jpeg" alt="Sample photo">
+        <img src="Image/img19.jpeg" alt="Sample photo">
+        <img src="Image/img1.jpeg" alt="Sample photo">
+        <img src="Image/img7.jpeg" alt="Sample photo">
     </main>
     <h2>Default alignment (stretch)</h2>
     <p>These examples also use the default alignment of stretch but, because not all images are the same size, it
@@ -60,12 +60,12 @@
         }
     </style>
     <div class="grid-stretch">
-        <img src="images/1m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/9m.jpg" alt="Sample photo">
-        <img src="images/12m.jpg" alt="Sample photo">
-        <img src="images/6m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
+        <img src="Image/img5.jpeg" alt="Sample photo">
+        <img src="Image/img4.jpeg" alt="Sample photo">
+        <img src="Image/img12.jpeg" alt="Sample photo">
+        <img src="Image/img18.jpeg" alt="Sample photo">
+        <img src="Image/img16.jpeg" alt="Sample photo">
+        <img src="Image/img6.jpeg" alt="Sample photo">
     </div>
 
     <h2>Align/justify start</h2>
@@ -85,12 +85,12 @@
         }
     </style>
     <div class="grid-align-justify">
-        <img src="images/1m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/9m.jpg" alt="Sample photo">
-        <img src="images/12m.jpg" alt="Sample photo">
-        <img src="images/6m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
+        <img src="Image/img11.jpeg" alt="Sample photo">
+        <img src="Image/img3.jpeg" alt="Sample photo">
+        <img src="Image/img1.jpeg" alt="Sample photo">
+        <img src="Image/img7.jpeg" alt="Sample photo">
+        <img src="Image/img19.jpeg" alt="Sample photo">
+        <img src="Image/img2.jpeg" alt="Sample photo">
     </div>
     <h3>Fluid</h3>
     <style>
@@ -109,12 +109,12 @@
         }
     </style>
     <div class="grid-align-justify-fluid">
-        <img src="images/1m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/9m.jpg" alt="Sample photo">
-        <img src="images/12m.jpg" alt="Sample photo">
-        <img src="images/6m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
+        <img src="Image/img15.jpeg" alt="Sample photo">
+        <img src="Image/img6.jpeg" alt="Sample photo">
+        <img src="Image/img16.jpeg" alt="Sample photo">
+        <img src="Image/img4.jpeg" alt="Sample photo">
+        <img src="Image/img18.jpeg" alt="Sample photo">
+        <img src="Image/img2.jpeg" alt="Sample photo">
     </div>
 
 
@@ -136,12 +136,12 @@
         }
     </style>
     <div class="grid-align-center">
-        <img src="images/1m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/9m.jpg" alt="Sample photo">
-        <img src="images/12m.jpg" alt="Sample photo">
-        <img src="images/6m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
+        <img src="Image/img1.jpeg" alt="Sample photo">
+        <img src="Image/img14.jpeg" alt="Sample photo">
+        <img src="Image/img17.jpeg" alt="Sample photo">
+        <img src="Image/img7.jpeg" alt="Sample photo">
+        <img src="Image/img11.jpeg" alt="Sample photo">
+        <img src="Image/img18.jpeg" alt="Sample photo">
     </div>
 
     <h3>Fluid</h3>
@@ -161,12 +161,12 @@
         }
     </style>
     <div class="grid-align-center-fluid">
-        <img src="images/1m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/9m.jpg" alt="Sample photo">
-        <img src="images/12m.jpg" alt="Sample photo">
-        <img src="images/6m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
+        <img src="Image/img5.jpeg" alt="Sample photo">
+        <img src="Image/img14.jpeg" alt="Sample photo">
+        <img src="Image/img8.jpeg" alt="Sample photo">
+        <img src="Image/img18.jpeg" alt="Sample photo">
+        <img src="Image/img6.jpeg" alt="Sample photo">
+        <img src="Image/img13.jpeg" alt="Sample photo">
     </div>
 
 
@@ -187,12 +187,12 @@
         }
     </style>
     <div class="grid-align-end">
-        <img src="images/1m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/9m.jpg" alt="Sample photo">
-        <img src="images/12m.jpg" alt="Sample photo">
-        <img src="images/6m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
+        <img src="Image/img5.jpeg" alt="Sample photo">
+        <img src="Image/img14.jpeg" alt="Sample photo">
+        <img src="Image/img8.jpeg" alt="Sample photo">
+        <img src="Image/img18.jpeg" alt="Sample photo">
+        <img src="Image/img6.jpeg" alt="Sample photo">
+        <img src="Image/img13.jpeg" alt="Sample photo">
     </div>
 
     <h3>Fluid</h3>
@@ -212,12 +212,12 @@
         }
     </style>
     <div class="grid-align-end-fluid">
-        <img src="images/1m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/9m.jpg" alt="Sample photo">
-        <img src="images/12m.jpg" alt="Sample photo">
-        <img src="images/6m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
+        <img src="Image/img1.jpeg" alt="Sample photo">
+        <img src="Image/img10.jpeg" alt="Sample photo">
+        <img src="Image/img11.jpeg" alt="Sample photo">
+        <img src="Image/img12.jpeg" alt="Sample photo">
+        <img src="Image/img13.jpeg" alt="Sample photo">
+        <img src="Image/img14.jpeg" alt="Sample photo">
     </div>
 
     <h2>Span 5 columns</h2>
@@ -244,17 +244,17 @@
         }
     </style>
     <div class="grid-span-columns">
-        <img src="images/22m.jpg" alt="Sample photo">
-        <img src="images/23m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
-        <img src="images/15m.jpg" alt="Sample photo">
-        <img src="images/17l.jpg" alt="Sample photo">
-        <img src="images/27m.jpg" alt="Sample photo">
-        <img src="images/28m.jpg" alt="Sample photo">
-        <img src="images/26m.jpg" alt="Sample photo">
-        <img src="images/30m.jpg" alt="Sample photo">
-        <img src="images/31m.jpg" alt="Sample photo">
+        <img src="Image/img1.jpeg" alt="Sample photo">
+        <img src="Image/img10.jpeg" alt="Sample photo">
+        <img src="Image/img11.jpeg" alt="Sample photo">
+        <img src="Image/img12.jpeg" alt="Sample photo">
+        <img src="Image/img13.jpeg" alt="Sample photo">
+        <img src="Image/img14.jpeg" alt="Sample photo">
+        <img src="Image/img15.jpeg" alt="Sample photo">
+        <img src="Image/img16.jpeg" alt="Sample photo">
+        <img src="Image/img17.jpeg" alt="Sample photo">
+        <img src="Image/img18.jpeg" alt="Sample photo">
+        <img src="Image/img19.jpeg" alt="Sample photo">
     </div>
 
     <h2>Fluid</h2>
@@ -278,17 +278,17 @@
         }
     </style>
     <div class="grid-span-columns-fluid">
-        <img src="images/22m.jpg" alt="Sample photo">
-        <img src="images/23m.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
-        <img src="images/15m.jpg" alt="Sample photo">
-        <img src="images/17l.jpg" alt="Sample photo">
-        <img src="images/27m.jpg" alt="Sample photo">
-        <img src="images/28m.jpg" alt="Sample photo">
-        <img src="images/26m.jpg" alt="Sample photo">
-        <img src="images/30m.jpg" alt="Sample photo">
-        <img src="images/31m.jpg" alt="Sample photo">
+        <img src="Image/img1.jpeg" alt="Sample photo">
+        <img src="Image/img10.jpeg" alt="Sample photo">
+        <img src="Image/img11.jpeg" alt="Sample photo">
+        <img src="Image/img12.jpeg" alt="Sample photo">
+        <img src="Image/img13.jpeg" alt="Sample photo">
+        <img src="Image/img14.jpeg" alt="Sample photo">
+        <img src="Image/img15.jpeg" alt="Sample photo">
+        <img src="Image/img16.jpeg" alt="Sample photo">
+        <img src="Image/img17.jpeg" alt="Sample photo">
+        <img src="Image/img18.jpeg" alt="Sample photo">
+        <img src="Image/img19.jpeg" alt="Sample photo">
     </div>
 
 
@@ -316,17 +316,16 @@
         }
     </style>
     <main class="grid-span3col">
-        <img src="images/22m.jpg" alt="Sample photo">
-        <img src="images/23l.jpg" alt="Sample photo">
-        <img src="images/24m.jpg" alt="Sample photo">
-        <img src="images/6m.jpg" alt="Sample photo">
-        <img src="images/1m.jpg" alt="Sample photo">
-        <img src="images/25m.jpg" alt="Sample photo">
-        <img src="images/15m.jpg" alt="Sample photo">
-        <img src="images/27m.jpg" alt="Sample photo">
-        <img src="images/28m.jpg" alt="Sample photo">
-        <img src="images/26m.jpg" alt="Sample photo">
+        <img src="Image/img1.jpeg" alt="Sample photo">
+        <img src="Image/img10.jpeg" alt="Sample photo">
+        <img src="Image/img11.jpeg" alt="Sample photo">
+        <img src="Image/img12.jpeg" alt="Sample photo">
+        <img src="Image/img13.jpeg" alt="Sample photo">
+        <img src="Image/img14.jpeg" alt="Sample photo">
+        <img src="Image/img15.jpeg" alt="Sample photo">
+        <img src="Image/img16.jpeg" alt="Sample photo">
+        <img src="Image/img17.jpeg" alt="Sample photo">
+        <img src="Image/img18.jpeg" alt="Sample photo">
     </main>
 </body>
-
 </html>
