--- a/CSS/26.Display/Grid/03TemplateArea.html
+++ b/CSS/26.Display/Grid/03TemplateArea.html
@@ -17,8 +17,8 @@
             display: grid;
             grid-template-columns: 150px 1fr;
             grid-template-rows: 50px auto 60px;
-            width: 100%;
-            height: 250px;
+            /* width: 100%; */
+            /* height: 250px; */
             grid-template-areas:
                 "kubhbi kubhbi"
                 "foot  foot"
