--- a/CSS/14.Float/01.Clear.html
+++ b/CSS/14.Float/01.Clear.html
@@ -9,7 +9,7 @@
         header{
             background-color: tan;
             height: 60px;
-            line-height: 60px;
+            /* line-height: 60px; */
         }
         .logo {
             float: left;
