--- a/JavaScript/06.DataTypes.html
+++ b/JavaScript/06.DataTypes.html
@@ -23,7 +23,7 @@
                 <td>N/A</td>
             </tr>
             <tr>
-                <td><a href="#undefined_type">Undefined</a></td>
+                <td><a href="#undefine_type">Undefined</a></td>
                 <td><code>"undefined"</code></td>
                 <td>N/A</td>
             </tr>
@@ -54,6 +54,18 @@
             </tr>
         </tbody>
     </table>
+    <script>
+        var test = null
+        console.log(test);
+        console.log(typeof test);
+        var testblank = ""
+        console.log(testblank);
+        console.log(typeof testblank);
+        console.log(checking);
+        var checking;
+        checking = "sss"
+        console.log(checking);
+    </script>
 </body>
 
 </html>
