--- a/JavaScript/17.Slider.html
+++ b/JavaScript/17.Slider.html
@@ -20,10 +20,10 @@
 
     <main>
         <div class="slider">
-            <div class="slider-img"><img src="images/1.jpg" alt=""> </div>
-            <div class="slider-img">kaipan </div>
-            <div class="slider-img"><img src="images/3.jpg" alt=""> </div>
-            <div class="slider-img"><img src="images/4.jpg" alt=""> </div>
+            <div class="slider-img"><img src="Image/1.jpg" alt=""> </div>
+            <div class="slider-img"><img src="Image/2.jpg" alt=""></div>
+            <div class="slider-img"><img src="Image/3.jpg" alt=""> </div>
+            <div class="slider-img"><img src="Image/4.jpg" alt=""> </div>
         </div>
     </main>
     <script>
